lates commit to deployment

--- a/templates/login.html
+++ b/templates/login.html
@@ -119,7 +119,7 @@
       //   // Send AJAX request to the server
       //   $.ajax({
       //     type: 'POST',
-      //     url: "{% url 'login' %}", // Replace with the actual URL to handle login request
+      //     url: "{% url 'login' %}", 
       //     data: formData,
       //     success: function(response) {
       //       alert("success")
