--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 {% block content %}
   
 
-
+{% block title%} ShopNify | Home {% endblock %}
   <!-- product section -->
 
   <section class="product_section layout_padding">
@@ -25,11 +25,9 @@
           <div class="box">
             <div class="img-box">
               <img src="{{ product.img.img.url }}" alt="">
-              <a href="" class="add_cart_btn">
-                <span>
-                  Add To Cart
-                </span>
-              </a>
+              <button   class=" border-0 add_to_cart" id="{{ product.id }}">
+                Add To Cart
+              </button>
             </div>
             <div class="detail-box">
               <h5>
@@ -37,7 +35,7 @@
               </h5>
               <div class="product_info">
                 <h5>
-                  <span>$</span>{{ product.price }}
+                  <span>D</span>{{ product.price }}
                 </h5>
                 <div class="star_container">
                   <i class="fa fa-star" aria-hidden="true"></i>
@@ -400,5 +398,32 @@
     </div>
   </footer>
   <!-- jQery -->
+  
+  <script>
+    let element_id = {data:[]};
+    if (localStorage.getItem("products")){
+
+    }else{
+      localStorage.setItem("products",JSON.stringify(element_id))
+    }
+    document.addEventListener("click",(e)=>{
+      console.log(e.target.id)
+      if (e.target.id){
+        const getItem = localStorage.getItem("products")
+        let newItem = JSON.parse(getItem)
+        if (newItem.data.includes(e.target.id)){
+          
+        }else{
+          newItem.data.push(e.target.id)
+          $("#cart_len").text(String(newItem.data.length))
+          $("#cart_len").addClass("bg-danger")
+        }
+        localStorage.setItem("products",JSON.stringify(newItem))
+        console.log(JSON.parse(localStorage.getItem("products")))        
+        
+        
+      }
+    })
+  </script>
 
 {% endblock  %}
