--- a/templates/partials/base.html
+++ b/templates/partials/base.html
@@ -30,15 +30,15 @@
     <!-- fonts style -->
     <!-- responsive style -->
 
-    <title>Document</title>
+    <title>{% block title %}Document {% endblock %}</title>
 </head>
 <body>
   {% block navbar %}
-  <div class="hero_area">
+  <div class="hero_area position-relative">
     <!-- header section strats -->
     <header class="header_section">
-      <div class="header_top">
-        <div class="container-fluid">
+      <div style="top: 0px;" class="header_top position-fixed z-3 w-100">
+        <div class="container-fluid position-relative">
           <div class="top_nav_container">
             <form class="search_form">
               <input type="text" class="form-control" placeholder="Search here...">
@@ -48,7 +48,7 @@
             </form>
             <div class="user_option_box">
               {% if user.is_authenticated %}
-              <a href="" class="account-link">
+              <a href="{% url 'profile' %}" class="account-link">
                 <i class="fa fa-user" aria-hidden="true"></i>
                 <span>
                   My Account 
@@ -59,10 +59,15 @@
               {% endif %}
               <a href="{% url 'checkout'%}" class="cart-link">
                 <span class="">
-                  <i class="fa fa-shopping-cart " aria-hidden="true"></i>
+                  <i class="fa fa-shopping-cart" aria-hidden="true">
+                    
+                  </i>
                 </span>
-                <span>
+                <span class="position-relative">
                   Cart
+                  <span  id="cart_len" class="position-absolute top-0 start-100 translate-middle badge rounded-pill ">
+                   
+                  <span  class="visually-hidden">unread messages</span>
                 </span>
               </a>
             </div>
@@ -70,12 +75,12 @@
 
         </div>
       </div>
-      <div class="header_bottom">
+      <div style="margin-top: 90px;" class="header_bottom ">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="{% url 'home' %}">
               <span>
-                Minics
+                ShopNify.com
               </span>
             </a>
 
@@ -217,5 +222,24 @@
   <script src="{% static 'js/bootstrap.min.js' %}" crossorigin="anonymous"></script>
   <!-- custom js -->
   <script src="{% static 'js/custom.js' %}" crossorigin="anonymous"></script>
+
+  <script>
+    if (localStorage.getItem("products")){
+      let prod = JSON.parse(localStorage.getItem("products"))
+      $("#cart_len").text(String(prod.data.length))
+
+      if (prod.data.length > 0){
+        $("#cart_len").addClass("bg-danger")
+      }
+    }else{
+      prod = {data:[]}
+      localStorage.setItem("products",JSON.stringify(prod))
+      $("#cart_len").text(String(prod.data.length))
+
+      if (prod.data.length > 0){
+        $("#cart_len").addClass("bg-danger")
+      }
+    }
+  </script>
 </body>
 </html>
