--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,6 +1,7 @@
 {% extends 'partials/base.html' %}
 {% load static %}
 
+{% block title%} My ShopNify {% endblock %}
 {% block content %}
 <section class="row row-cols-1 row-cols-md-2">
     <div class="col border-end">
