--- a/templates/profile.html
+++ b/templates/profile.html
@@ -12,7 +12,7 @@
             </div>
             <form class="col flex flex-column justify-content-between " action="">
                 <div class=" h-50 flex flex-column justify-content-center">
-                    <h3>Solomon</h3>
+                    <h3> {{user.first_name}} {{user.last_name}} </h3>
                 </div>
                 <div class="h-25 flex flex-column justify-content-center">
                     <input type="file" class="form-control w-100">
